switching to yolov5 inference

--- a/dataSetter.ipynb
+++ b/dataSetter.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import cv2\n",
     "from pathlib import Path\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import os"
    ]
   },
   {
@@ -55,13 +56,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -69,38 +63,46 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Day_1_Test: 100%|██████████| 467/467 [00:09<00:00, 49.66it/s]\n",
-      "Processing Day_2_Test: 100%|██████████| 317/317 [00:07<00:00, 44.55it/s]\n",
-      "Processing Dry_Test: 100%|██████████| 324/324 [00:05<00:00, 58.32it/s]\n",
-      "Processing Night_1_Test: 100%|██████████| 306/306 [00:07<00:00, 40.49it/s]\n",
-      "Processing Night_2_Test: 100%|██████████| 321/321 [00:07<00:00, 42.09it/s]\n",
-      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:04<00:00, 75.25it/s]\n",
-      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:05<00:00, 60.76it/s]\n",
-      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:03<00:00, 98.29it/s] \n",
-      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:18<00:00, 55.94it/s]\n",
-      "Processing Day_2_Train: 100%|██████████| 924/924 [00:19<00:00, 47.38it/s]\n",
-      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:19<00:00, 62.02it/s]\n",
-      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:21<00:00, 49.06it/s]\n",
-      "Processing Night_2_Train: 100%|██████████| 915/915 [00:21<00:00, 42.45it/s]\n",
-      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:13<00:00, 78.62it/s]\n",
-      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:15<00:00, 69.78it/s]\n",
-      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:19<00:00, 61.88it/s]\n",
-      "Processing Day_1_Test: 100%|██████████| 467/467 [00:08<00:00, 55.90it/s]\n",
-      "Processing Day_2_Test: 100%|██████████| 317/317 [00:06<00:00, 51.97it/s]\n",
-      "Processing Dry_Test: 100%|██████████| 324/324 [00:04<00:00, 74.80it/s]\n",
-      "Processing Night_1_Test: 100%|██████████| 306/306 [00:05<00:00, 51.23it/s]\n",
-      "Processing Night_2_Test: 100%|██████████| 321/321 [00:05<00:00, 55.91it/s]\n",
-      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:02<00:00, 151.54it/s]\n",
-      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:03<00:00, 84.18it/s]\n",
-      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:03<00:00, 83.37it/s]\n",
-      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:16<00:00, 61.95it/s]\n",
-      "Processing Day_2_Train: 100%|██████████| 924/924 [00:17<00:00, 52.00it/s]\n",
-      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:15<00:00, 79.67it/s]\n",
-      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:18<00:00, 56.69it/s]\n",
-      "Processing Night_2_Train: 100%|██████████| 915/915 [00:16<00:00, 55.50it/s]\n",
-      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:07<00:00, 148.72it/s]\n",
-      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:12<00:00, 82.91it/s]\n",
-      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:14<00:00, 82.59it/s]\n"
+      "Processing Day_1_Test: 100%|██████████| 467/467 [00:06<00:00, 75.88it/s] \n",
+      "Processing Day_2_Test: 100%|██████████| 317/317 [00:04<00:00, 68.84it/s]\n",
+      "Processing Dry_Test: 100%|██████████| 324/324 [00:03<00:00, 102.24it/s]\n",
+      "Processing Night_1_Test: 100%|██████████| 306/306 [00:04<00:00, 62.00it/s]\n",
+      "Processing Night_2_Test: 100%|██████████| 321/321 [00:04<00:00, 68.76it/s]\n",
+      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:01<00:00, 173.58it/s]\n",
+      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:03<00:00, 95.52it/s] \n",
+      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:03<00:00, 80.60it/s]\n",
+      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:14<00:00, 68.52it/s] \n",
+      "Processing Day_2_Train: 100%|██████████| 924/924 [00:13<00:00, 66.11it/s]\n",
+      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:11<00:00, 102.72it/s]\n",
+      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:16<00:00, 63.16it/s]\n",
+      "Processing Night_2_Train: 100%|██████████| 915/915 [00:14<00:00, 62.39it/s]\n",
+      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:06<00:00, 172.02it/s]\n",
+      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:10<00:00, 98.35it/s] \n",
+      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:10<00:00, 109.56it/s]\n",
+      "Processing Day_1_Test: 100%|██████████| 467/467 [00:06<00:00, 74.13it/s] \n",
+      "Processing Day_2_Test: 100%|██████████| 317/317 [00:06<00:00, 51.02it/s]\n",
+      "Processing Dry_Test: 100%|██████████| 324/324 [00:03<00:00, 83.25it/s]\n",
+      "Processing Night_1_Test: 100%|██████████| 306/306 [00:05<00:00, 56.96it/s]\n",
+      "Processing Night_2_Test: 100%|██████████| 321/321 [00:05<00:00, 58.19it/s]\n",
+      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:02<00:00, 149.02it/s]\n",
+      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:03<00:00, 83.86it/s]\n",
+      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:03<00:00, 81.46it/s]\n",
+      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:12<00:00, 80.35it/s] \n",
+      "Processing Day_2_Train: 100%|██████████| 924/924 [00:17<00:00, 52.59it/s]\n",
+      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:15<00:00, 77.49it/s]\n",
+      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:18<00:00, 56.35it/s]\n",
+      "Processing Night_2_Train: 100%|██████████| 915/915 [00:16<00:00, 54.60it/s]\n",
+      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:07<00:00, 145.23it/s]\n",
+      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:12<00:00, 83.95it/s]\n",
+      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:14<00:00, 81.56it/s]\n",
+      "Processing Day_1_Val: 100%|██████████| 305/305 [00:03<00:00, 93.90it/s] \n",
+      "Processing Day_2_Val: 100%|██████████| 310/310 [00:06<00:00, 49.11it/s]\n",
+      "Processing Dry_Val: 100%|██████████| 324/324 [00:06<00:00, 46.36it/s]\n",
+      "Processing Night_1_Val: 100%|██████████| 322/322 [00:08<00:00, 39.28it/s]\n",
+      "Processing Night_2_Val: 100%|██████████| 311/311 [00:07<00:00, 41.98it/s]\n",
+      "Processing Rain_1_Val: 100%|██████████| 311/311 [00:04<00:00, 76.63it/s]\n",
+      "Processing Wet_Bright_Val: 100%|██████████| 325/325 [00:06<00:00, 52.45it/s]\n",
+      "Processing Wet_Dim_Val: 100%|██████████| 317/317 [00:05<00:00, 54.70it/s]\n"
      ]
     }
    ],
@@ -115,6 +117,8 @@
     "        extension = '_Train'\n",
     "    elif 'test' in video.lower():\n",
     "        extension = '_Test'\n",
+    "    elif 'valid' in video.lower():\n",
+    "        extension = '_Val'\n",
     "\n",
     "    vid_dir = video.replace('.mp4', extension)\n",
     "\n",
@@ -132,20 +136,24 @@
     "            # creaye dir if not exist\n",
     "            if not Path(images_out_dir+vid_dir).exists():\n",
     "                Path(images_out_dir+vid_dir).mkdir(parents=True)\n",
+    "            \n",
+    "            # ensure frame is no zero size array\n",
+    "            if frame.shape[0] == 0 or frame.shape[1] == 0 or frame.size == 0:\n",
+    "                print('SKIPPING ERRORED FRAME: ', vid_dir, i)\n",
+    "                continue\n",
+    "            \n",
+    "            contents = open(annotations_paths[i], 'r').readlines()\n",
+    "            if len(contents) == 0:\n",
+    "                continue\n",
+    "            \n",
+    "            if not Path(labels_out_dir + vid_dir).exists():\n",
+    "                Path(labels_out_dir + vid_dir).mkdir(parents=True)\n",
+    "\n",
+    "            dest_path = labels_out_dir + vid_dir+'/' + str(i) + '.txt'\n",
+    "            with open(dest_path, 'w') as f:\n",
+    "                f.writelines(contents)\n",
+    "\n",
     "            cv2.imwrite(images_out_dir + vid_dir+'/' + str(i) + '.jpg', frame)\n",
-    "            # cv2.imshow('frame', frame)\n",
-    "\n",
-    "            with open(annotations_paths[i]) as f:\n",
-    "                if len(f.readlines()) == 0:\n",
-    "                    continue\n",
-    "                \n",
-    "                # if sub_folder does not exist create it\n",
-    "                if not Path(labels_out_dir + vid_dir).exists():\n",
-    "                    Path(labels_out_dir + vid_dir).mkdir(parents=True)\n",
-    "\n",
-    "                with open(labels_out_dir + vid_dir+'/' + str(i) + '.txt', 'w') as destination:\n",
-    "                    for line in f:\n",
-    "                        destination.write(line)\n",
     "\n",
     "        else:\n",
     "            print('error')\n",
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +174,8 @@
     "\n",
     "all_image_dirs = os.listdir(full_images)\n",
     "all_train_images = [i for i in all_image_dirs if 'train' in i.lower()]\n",
-    "all_val_images = [i for i in all_image_dirs if 'test' in i.lower()]\n",
+    "all_test_images = [i for i in all_image_dirs if 'test' in i.lower()]\n",
+    "all_val_images = [i for i in all_image_dirs if 'val' in i.lower()]\n",
     "\n",
     "all_train_images\n",
     "\n",
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +195,7 @@
        "49"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,6 +214,12 @@
     "    yam_file.write('val: ' + '\\n')\n",
     "    for dir in all_val_images:\n",
     "        yam_file.write('  - '+im_dir+dir+'\\n')\n",
+    "yam_file.write('\\n')\n",
+    "if len(all_test_images) > 0:\n",
+    "    yam_file.write('test: ' + '\\n')\n",
+    "    for dir in all_test_images:\n",
+    "        yam_file.write('  - '+im_dir+dir+'\\n')\n",
+    "\n",
     "yam_file.write('\\n')\n",
     "\n",
     "\n",
