testing dataset; fixing issues with yolo5 output format

--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "video_path = 'inputs/media/Clips/'\n",
     "output_txt_path = 'outputs/yolo5_classification/'\n",
-    "custom_model = False\n",
+    "custom_model = True\n",
     "# custom_model = True\n",
     "\n",
     "def get_video_paths():\n",
@@ -42,11 +42,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using cache found in C:\\Users\\ethan/.cache\\torch\\hub\\ultralytics_yolov5_master\n",
+      "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\ethan/.cache\\torch\\hub\\master.zip\n",
       "YOLOv5  2022-1-11 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
       "\n",
       "Fusing layers... \n",
-      "Model Summary: 290 layers, 21172173 parameters, 0 gradients\n",
+      "Model Summary: 213 layers, 7023610 parameters, 0 gradients, 15.8 GFLOPs\n",
       "Adding AutoShape... \n"
      ]
     }
@@ -55,7 +55,7 @@
     "model = None\n",
     "if custom_model:\n",
     "    output_txt_path.replace('yolo5_classification', 'yolo5_classification_Ours')\n",
-    "    custom_model_path = 'custom_train\\yolov5\\runs\\train\\exp38\\weights\\best.pt'\n",
+    "    custom_model_path = 'custom_train\\\\yolov5\\\\runs\\\\train\\\\exp38\\weights\\\\last.pt'\n",
     "    model = torch.hub.load('ultralytics/yolov5', 'custom', path=custom_model_path, force_reload=True)\n",
     "else:\n",
     "    model = torch.hub.load('ultralytics/yolov5', 'yolov5m')\n"
@@ -68,12 +68,12 @@
    "outputs": [],
    "source": [
     "def classify_image(img):\n",
-    "    results = model([img], size=1024)\n",
+    "    results = model([img])\n",
     "    return results\n",
     "\n",
     "\n",
     "def classify_images(images):\n",
-    "    results = model(images, size=1024)\n",
+    "    results = model(images)\n",
     "    return results"
    ]
   },
@@ -95,15 +95,26 @@
     "        coco_ours_map[c] = classes.index(c)\n",
     "\n",
     "\n",
-    "def append_box_to_file(path, frame_no, results):\n",
+    "def append_box_to_file(path, frame_no, results, sizes):\n",
     "    results = results.pandas().xyxy[0]\n",
     "    str_to_append = \"\"\n",
     "    for i, row in results.iterrows():\n",
     "        x1, y1, x2, y2 = row['xmin'], row['ymin'], row['xmax'], row['ymax']\n",
-    "        x1 = round(x1)\n",
-    "        y1 = round(y1)\n",
-    "        x2 = round(x2)\n",
-    "        y2 = round(y2)\n",
+    "\n",
+    "\n",
+    "        # change to x_center, y_center, width, height\n",
+    "        x_center = (x1 + x2) / 2\n",
+    "        y_center = (y1 + y2) / 2\n",
+    "        width = x2 - x1\n",
+    "        height = y2 - y1\n",
+    "\n",
+    "        img_width, img_height = sizes\n",
+    "        # normalize\n",
+    "        x_center = x_center / img_width\n",
+    "        y_center = y_center / img_height\n",
+    "        width = width / img_width\n",
+    "        height = height / img_height\n",
+    "        \n",
     "\n",
     "        conf, clas_id, name = row['confidence'], row['class'], row['name']\n",
     "\n",
@@ -111,7 +122,8 @@
     "            continue\n",
     "\n",
     "        our_class_id = coco_ours_map[name]\n",
-    "        str_to_append  += str(our_class_id) + ' ' + str(x1) + ' ' + str(y1) + ' ' + str(x2) + ' ' + str(y2) + '\\n'\n",
+    "        # str_to_append  += str(our_class_id) + ' ' + str(x1) + ' ' + str(y1) + ' ' + str(x2) + ' ' + str(y2) + '\\n'\n",
+    "        str_to_append += str(our_class_id) + ' ' + str(x_center) + ' ' + str(y_center) + ' ' + str(width) + ' ' + str(height) + '\\n'\n",
     "\n",
     "    # print('Saving Frame: ', frame_no)\n",
     "    new_path=os.path.join(path, str(frame_no)+'.txt')\n",
@@ -154,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def label_videos(videos, show_video=False):\n",
+    "def label_videos(videos, show_video=False, save=False):\n",
     "    for video_path in videos:\n",
     "        total_frames = cv2.VideoCapture(video_path).get(cv2.CAP_PROP_FRAME_COUNT)\n",
     "        video = cv2.VideoCapture(video_path)\n",
@@ -175,7 +187,9 @@
     "            print(f'Frame: {frame_no}/{total_frames}',end='\\r')\n",
     "            result = classify_image(frame)\n",
     "\n",
-    "            append_box_to_file(coord_path, frame_no, result)\n",
+    "            if save:\n",
+    "                size = frame.shape[:2]\n",
+    "                append_box_to_file(coord_path, frame_no, result, size)\n",
     "\n",
     "            if show_video:\n",
     "                img = draw_image(frame, result)\n",
@@ -250,10 +264,11 @@
    ],
    "source": [
     "videos = get_video_paths()\n",
+    "# videos = [v for v in videos if 'original' in v.lower()]\n",
     "videos = [v for v in videos if 'test' in v.lower()]\n",
     "print('Found {} total videos'.format(len(videos)))\n",
     "\n",
-    "label_videos(videos, show_video=False)\n"
+    "label_videos(videos, show_video=False,save=True)\n"
    ]
   },
   {
