rerun to mitigate xy_index_flip

--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     "    width = x2 - x1\n",
     "    height = y2 - y1\n",
     "\n",
-    "    img_width, img_height = sizes\n",
+    "    img_height, img_width = sizes\n",
     "    # normalize\n",
     "    x_center = x_center / img_width\n",
     "    y_center = y_center / img_height\n",
@@ -100,7 +100,7 @@
     "    return x_center, y_center, width, height\n",
     "\n",
     "def convert_to_minmax(x_center, y_center, width, height, sizes):\n",
-    "    img_width, img_height = sizes\n",
+    "    img_height, img_width = sizes\n",
     "    # normalize\n",
     "    x_center = x_center * img_width\n",
     "    y_center = y_center * img_height\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,44 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(frame, coords, model_start_from_centre=True):\n",
-    "    x_start = None\n",
-    "    for i, row in coords.iterrows():\n",
-    "        x_start, y_start, width, height = convert_to_yolo(row['xmin'], row['ymin'], row['xmax'], row['ymax'], frame.shape[:2])\n",
-    "\n",
-    "    if not x_start:\n",
-    "        return\n",
-    "\n",
-    "    x_res = frame.shape[0]\n",
-    "    y_res = frame.shape[1]\n",
-    "\n",
-    "    if model_start_from_centre:\n",
-    "        x_start = x_start - width/2\n",
-    "        y_start = y_start - height/2\n",
-    "        \n",
-    "    # calculate the box's coordinates on the image\n",
-    "    x_start = round(x_start*x_res)\n",
-    "    y_start = round(y_start*y_res)\n",
-    "    width = round(width*x_res)\n",
-    "    height = round(height*y_res)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    x_end = x_start + width\n",
-    "    y_end = y_start + height\n",
-    "    cv2.rectangle(frame, (x_start, y_start),(x_end, y_end), (0, 255, 0), 2) #draws the box\n",
-    "    cv2.putText(frame, 'karozza', (x_start, y_start), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 1)    # label the category\n",
-    "    cv2.imshow('frame', frame)\n",
-    "    cv2.waitKey(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +223,6 @@
     "            print(f'Frame: {frame_no}/{total_frames}',end='\\r')\n",
     "            result = classify_image(frame)\n",
     "\n",
-    "            test(frame, result.pandas().xyxy[0], True)\n",
-    "\n",
     "            if save:\n",
     "                size = frame.shape[:2]\n",
     "                append_box_to_file(coord_path, frame_no, result, size)\n",
@@ -278,48 +239,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8 total videos\n",
+      "Found 16 total videos\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_1.mp4\n",
+      "Frame: 467.0/467.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_2.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Dry.mp4\n",
+      "Frame: 324.0/324.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Night_1.mp4\n",
+      "Frame: 306.0/306.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Night_2.mp4\n",
+      "Frame: 321.0/321.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Rain_1.mp4\n",
+      "Frame: 314.0/314.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Wet_Bright.mp4\n",
+      "Frame: 325.0/325.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Wet_Dim.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Test\\Day_1.mp4\n",
-      "Frame: 225.0/467.0\r"
+      "Frame: 467.0/467.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Day_2.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Dry.mp4\n",
+      "Frame: 324.0/324.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Night_1.mp4\n",
+      "Frame: 306.0/306.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Night_2.mp4\n",
+      "Frame: 321.0/321.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Rain_1.mp4\n",
+      "Frame: 314.0/314.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Wet_Bright.mp4\n",
+      "Frame: 325.0/325.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Wet_Dim.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "videos = get_video_paths()\n",
-    "videos = [v for v in videos if 'original' in v.lower()]\n",
+    "# videos = [v for v in videos if 'original' in v.lower()]\n",
     "videos = [v for v in videos if 'test' in v.lower()]\n",
     "print('Found {} total videos'.format(len(videos)))\n",
     "\n",
-    "label_videos(videos, show_video=False,save=False)\n"
+    "label_videos(videos, show_video=False,save=True)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
